--- a/Responsive Portfolio/index.html
+++ b/Responsive Portfolio/index.html
@@ -3,14 +3,14 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bryan's Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
 
   <body>
-<!--add some borders, fix sizing of images. margins. text format and fonts. footer maybe. codepen insta git logos.-->
+
   <header>
     <img class="header-logo" src="http://logo.kenh.net/logo/udacity.svg.png" alt="udacity logo">
     <div class="header-title">
@@ -21,6 +21,7 @@
 
   <main>
     <section class="main-content-udacity-told-me-i-could-not-leave-a-section-not-labeled">
+
       <img id="me-liam" src="img/me.png" alt="Bryan Leung chilling with his cute af nephew Liam who is leaning on a teal colored Perry the Plataypus">
 
       <h3>Featured Work</h3>
@@ -39,6 +40,12 @@
           <h4 class="project-title">Random Quote Generator using JSON</h4>
         </div>
       </div>
+
+      <p class="footer"> This was made by <a id="weblink-cursor" target="_blank" href="http://codepen.io/byn/">Bryan</a></p>
+
     </section>
   </main>
+
   </body>
+
+</html>
